# tree-sitter-lama

./: Cargo.toml  LICENSE  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm  locals.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: compilation_units.txt  expressions.txt  extensions.txt  literals.txt  scope_expressions.txt
